test/testdata/invalid/context_bad_tag.cue
package config

import "github.com/grantcarthew/start/test/testdata/schemas"

// Invalid: tags must be lowercase kebab-case
contexts: "bad": schemas.#Context & {
	file: "./test.md"
	tags: ["INVALID_TAG", "Also Bad"]
}
